--- a/SalesForeautomation/pom.xml
+++ b/SalesForeautomation/pom.xml
@@ -67,5 +67,21 @@
     <version>3.5.3</version>
 </dependency>
 </dependencies>
+
+<!-- https://mvnrepository.com/artifact/org.apache.maven/maven-plugin-api -->
+<build>
+	<plugins>
+	<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.3</version>
+    <configuration>
+    	<source>1.8</source>
+	<target>1.8</target>
+    	</configuration>
+</plugin>
+</plugins>
+</build>
+
 </project>
 
