--- a/SalesForeautomation/pom.xml
+++ b/SalesForeautomation/pom.xml
@@ -70,16 +70,35 @@
 
 <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-plugin-api -->
 <build>
-	<plugins>
-	<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-compiler-plugin</artifactId>
-    <version>3.3</version>
-    <configuration>
-    	<source>1.8</source>
-	<target>1.8</target>
-    	</configuration>
-</plugin>
+	<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<filtering>false</filtering>
+			</resource>
+		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20.1</version>
+				<configuration>
+					<forkCount>2</forkCount>
+					<reuseForks>false</reuseForks>
+					<includes>
+						<include>TestRunner*.class</include>
+					</includes>
+				</configuration>
+			</plugin>
 </plugins>
 </build>
 
