--- a/SalesForeautomation/pom.xml
+++ b/SalesForeautomation/pom.xml
@@ -72,7 +72,7 @@
 <build>
 	<resources>
 			<resource>
-				<directory>src/main/java</directory>
+				<directory>src/test/java</directory>
 				<filtering>false</filtering>
 			</resource>
 		</resources>
