--- a/SalesForeautomation/pom.xml
+++ b/SalesForeautomation/pom.xml
@@ -72,7 +72,7 @@
 <build>
 	<resources>
 			<resource>
-				<directory>src/test/java</directory>
+				<directory>src/main/java</directory>
 				<filtering>false</filtering>
 			</resource>
 		</resources>
@@ -80,7 +80,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.8.0</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
